made few changes to code

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </table>
 
     <footer>
-        Follow me on <a href="https://github.com/Mukheshchandra">Github.</a>
+        Follow me on <a href="https://github.com/Mukheshchandra" target="_blank">Github.</a>
     </footer>
     
     <script src="script.js"></script>
